fix css z-index-menu

--- a/scss/layout/_filters.scss
+++ b/scss/layout/_filters.scss
@@ -47,6 +47,7 @@
 
     &--open {
         left: 0;
+        z-index: 5;
     }
 
     @include tablet {
