--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -35,7 +35,6 @@
     background-color: transparent;
     border: none;
     position: absolute;
-    z-index: 4;
     cursor: pointer;
     right: $space-base * 3;
 
@@ -46,6 +45,9 @@
 
     &-icon-close {
         display: none;
+    }
+    &--open {
+        z-index: 20;
     }
 
     &--open & {
@@ -114,6 +116,7 @@
 
     &--open {
         left: 0;
+        z-index: 10;
         box-shadow: 0 0 0 100vw rgba(24, 26, 23, 0.5);
     }
 
